[package]
name = "roguelike-celebration-2020"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "backend",
    "c01-rooms",
    "c02-bsprooms",
    "c03-cellular",
    "c04-drunkard",
    "c05-dla",
    "c06-dla-attractor",
    "c07-dla-symmetry",
    "c08-dla-erosion",
    "c08a-voronoi",
    "c09-combination",
    "c10-perlin",
    "c11-overworld",
    "c12-noisezoom",
    "c13-double-noise",
    "c14-not-a-trap",
    "c15-still-not-a-trap",
    "c16-unreachable"
]